--- a/src/darkone.css
+++ b/src/darkone.css
@@ -32,7 +32,7 @@ color: hsla(0,0%,100%,.8);
 --background-help-info: rgba(0, 152, 244, 0.1);
 --scrollbar-thin-thumb: #202225;
 --scrollbar-thin-track: transparent;
---scrollbar-auto-thumb: #2e3338;
+--scrollbar-auto-thumb: #616c78;
 --scrollbar-auto-track: #202225;
 --scrollbar-auto-scrollbar-color-thumb: #202225;
 --scrollbar-auto-scrollbar-color-track: #2f3136;
