--- a/src/darkone.css
+++ b/src/darkone.css
@@ -61,8 +61,12 @@ color: hsla(0,0%,100%,.8);
 color: #ffffff00;
 }
 .unread-1xRYoj {
-background-color: #79b7ff;
-opacity: 1;
+    background-color: #727e8ca3;
+    opacity: 1;
+}
+.unread-1xRYoj:hover{
+    background-color: #727e8c;
+    opacity: 1;
 }
 .sidebar-2K8pFh.hideElement .container-3baos1 {
 background-color: #22242700;
