--- a/src/darkone.css
+++ b/src/darkone.css
@@ -101,7 +101,7 @@ background: #1a1a1c;
     border-radius: 10px;
 }
 .scrollerWrap-2lJEkd::-webkit-scrollbar-thumb:hover {
-background: #202225; 
+background: #616c78; 
 }
 .scrollerWrap-2lJEkd{
 overflow: auto;
