--- a/src/darkone.css
+++ b/src/darkone.css
@@ -30,7 +30,7 @@ color: hsla(0,0%,100%,.8);
 --background-message-hover: rgba(0, 0, 0, 0.21);
 --background-help-warning: rgba(250, 150, 26, 0.1);
 --background-help-info: rgba(0, 152, 244, 0.1);
---scrollbar-thin-thumb: #202225;
+--scrollbar-thin-thumb: #2a2d31;
 --scrollbar-thin-track: transparent;
 --scrollbar-auto-thumb: #616c78;
 --scrollbar-auto-track: #202225;
