--- a/src/darkone.css
+++ b/src/darkone.css
@@ -149,3 +149,10 @@ background: #202023;
 .scroller-2TZvBN {
 background-color: #0a0a0a;
 }
+.lookInverted-2D7oAl.colorGreen-29iAKY {
+    color: #202225;
+    background-color: #fff;
+}
+.topSectionSpotify-1lI0-P {
+    background: #202225;
+}
