--- a/src/darkone.css
+++ b/src/darkone.css
@@ -149,6 +149,7 @@ background: #202023;
 .scroller-2TZvBN {
 background-color: #0a0a0a;
 }
+///Spotify Settings
 .lookInverted-2D7oAl.colorGreen-29iAKY {
     color: #202225;
     background-color: #fff;
@@ -156,3 +157,7 @@ background-color: #0a0a0a;
 .topSectionSpotify-1lI0-P {
     background: #202225;
 }
+.headerSpotify-zpWxgT {
+    background: #202225;
+}
+////
