--- a/src/darkone.css
+++ b/src/darkone.css
@@ -149,7 +149,7 @@ background: #202023;
 .scroller-2TZvBN {
 background-color: #0a0a0a;
 }
-///Spotify Settings
+/*Spotify Settings*/
 .lookInverted-2D7oAl.colorGreen-29iAKY {
     color: #202225;
     background-color: #fff;
@@ -160,4 +160,3 @@ background-color: #0a0a0a;
 .headerSpotify-zpWxgT {
     background: #202225;
 }
-////
