--- a/src/darkone.css
+++ b/src/darkone.css
@@ -160,3 +160,11 @@ background-color: #0a0a0a;
 .headerSpotify-zpWxgT {
     background: #202225;
 }
+.circleIconButton-jET_ig.selected-ugP_am {
+    color: #fff;
+    background-color: #b54343d2;
+}
+.circleIconButton-jET_ig {
+    color: #b54343;
+    background-color: #222427;
+}
