--- a/src/darkone.css
+++ b/src/darkone.css
@@ -168,3 +168,261 @@ background-color: #0a0a0a;
     color: #b54343;
     background-color: #222427;
 }
+.circleButtonMask-2VNJsN .wrapper-25eVIn{
+    background-color: #b54343d2;
+}
+/* path[Attributes Style] {
+    fill: rebeccapurple;
+} */
+.theme-dark .pageWrapper-1PgVDX {
+    background-color: #1a1a1c;
+    color: #fff;
+}
+
+.searchHeader-2I26nG .headerImage-3X1tyY{
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 20px solid #1d1d1d;
+    border-radius: 100px;
+}
+.categoryItem-3zFJns.selectedCategoryItem-3X8ujp .itemInner-3gVXMG {
+    background-color: #b54343d2;
+}
+.wrapper-2qzCYF.minimum-28Z35l {
+    height: 240px;
+    background-color: #1a1a1c;
+}
+.wrapper-2qzCYF {
+    z-index: 2;
+    position: relative;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+    /* background-color: #18181ab6; */
+    background-color: #1a1a1c;
+    overflow: hidden;
+}
+.headerStreaming-2FjmGz {
+    background: #202225;
+}
+.lookOutlined-3sRXeN.colorWhite-rEQuAQ:hover {
+    color: #1DB954;
+    border-color: #1DB954;
+}
+.lookOutlined-3sRXeN.colorWhite-rEQuAQ {
+    color: #ffffff;
+    border-color: #ffffff;
+}
+.lookOutlined-3sRXeN.colorWhite-rEQuAQ {
+    color: #ffffff;
+    border-color: #ffffff;
+}
+.wrapper-3D2qGf {
+    background-color: #13131300;
+}
+.theme-dark .outer-1AjyKL.interactive-3B9GmY:hover {
+    background-color: #111214;
+}
+/*1a1a1c #1e202200*/
+.container-1r6BKw.themed-ANHk51 {
+    background: #1a1a1c;
+}
+.scroller-305q3I {
+    background-color: #22242700;
+}
+.theme-dark .inset-3sAvek {
+    background-color: #0019ff00;
+}
+.zoomLense-uOK8xV {
+    border: 2px solid rgba(0, 0, 0, 0);
+}
+.topSectionXbox-3fWLjS {
+    background: #107c1000;
+}
+.scrollerInner-2YIMLh{
+    background-color: #1a1a1c;
+    border: 0;
+}
+.form-2fGMdU{
+    background-color: #1a1a1c;
+    border: 0;
+}
+.form-2fGMdU:before {
+    background: none;
+}
+.scrollableContainer-2NUZem {
+    background-color: #38383854;
+    background-color: #1a1a1c52;
+}
+.theme-dark .children-19S4PO:after {
+    background: none;
+}
+.theme-dark .form-2fGMdU:before {
+    background: none;
+}
+.pendingBar-1vOJ9X {
+    border: 1px solid #f04747;
+}
+.side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ {
+    background-color: #7289da;
+}
+.scroller-1J_F7B {
+    background-color: #1a1a1c;
+}
+.theme-dark .headerClickable-2IVFo9, .theme-dark .headerDefault-1wrJcN {
+    background-color: #13131373;
+}
+.theme-dark .auditLog-3jNbM6 {
+    color: #92969c;
+    background-color: #13131373;
+}
+.theme-dark .headerExpanded-CUEwZ5 {
+    background-color: #20222500;
+}
+.auditLog-3jNbM6 {
+    border: none;
+}
+.fieldList-21DyL8 {
+    background-color: #22242700;
+}
+.mentioned-xhSam7:before {
+    background-color: #ff6500;
+}
+.reactionCount-2mvXRV {
+    color: #ffffff;
+}
+.reaction-1hd86g.reactionMe-wv5HKu {
+    background-color: rgba(114, 137, 218, 0.07);
+}
+.mentioned-xhSam7 {
+    background-color: rgba(255, 159, 0, 0.04);
+}
+.theme-dark .perksModal-fSYqOq {
+    background-color: #191a1c;
+}
+.theme-dark .root-1gCeng {
+    background-color: #1a1a1c;
+}
+.theme-dark .root-1gCeng {
+    background-color: #1a1a1c;
+}
+.theme-dark .iconWrapper-3LVgIo {
+    background: #131313;
+}
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6:active, .theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6:hover {
+    background-color: #29292961;
+}
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+    background-color: #13131370;
+}
+.theme-dark .tierMarkerBackground-3q29am {
+    background-color: #1a1a1c;
+}
+.lookFilled-1Gx00P.colorBrand-3pXr91 {
+    background-color: #3f51b5;
+}
+.lookFilled-1Gx00P.colorBrand-3pXr91:hover {
+    background-color: #7690ee;
+}
+.divider-JfaTT5 {
+    border-top: thin solid hsla(0, 0%, 100%, 0.1);
+}
+.content-1o0f9g {
+    background: #22242700;
+}
+.theme-dark .footer-2gL1pp {
+    background-color: #1a1a1c;
+}
+.scroller-2LSbBU {
+    background: #1a1a1c;
+}
+.da-actionButtons button{
+    background-color: #3f51b500;
+}
+.actionButtons-14eAc_ .colorBrand-3pXr91{
+    background-color: #7289da00;
+}
+.actionButtons-14eAc_ .colorBrand-3pXr91:hover{
+    background-color: #7289da00;
+}
+.wrapper-3vR61M {
+    background-color: #1a1a1c;
+}
+.wrapper-1F5TKx{
+    background-color: #1a1a1c;
+}
+.theme-dark .auditLog-3jNbM6 {
+    color: #92969c;
+    background-color: #15151500;
+}
+.theme-dark .changeDetails-bk98pu {
+    background-color: #15151500;
+}
+.theme-dark .card-3IImnr {
+    /* border-color: #5f94d747; */
+    border-color: #13131336;
+}
+.wrapper-1Rf91z{
+    /* padding-top: 10px; */
+    background-color: #131313;
+}
+.scroller-2TZvBN{
+    background-color: #131313;
+}
+.scroller-2TZvBN {
+    background-color: #131313;
+}
+.peopleListItem-2nzedh.active-rhSpJJ, .peopleListItem-2nzedh:hover {
+    background: #131313;
+}
+.messages-3G3erD {
+    background-color: #131313;
+}
+.messageContainer-gbhlwo {
+    background-color: #131313;
+}
+.selected-aXhQR6 .layout-2DM8Md {
+    background-color: #26262b;
+}
+.wrapper-6URcxg{
+    background-color: #131313;
+}
+.theme-dark.authBox-hW6HRx {
+    background: #1a1a1c;
+}
+/* side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ {
+    background-color: #212124;
+} */
+.side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ {
+    background-color: #e9f9ff15;
+}
+.scroller-2XE8rp {
+    background-color: #1a1a1c;
+    contain: layout size;
+}
+.gameUpdates-2GPqBU {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    background-color: #1a1a1c;
+}
+.theme-dark .socialLink-3n2n25 {
+    transition: 0.3s;
+}
+.theme-dark .socialLink-3n2n25:hover {
+    color: #ffffff82;
+}
+/*212326*/
+.checklistContainer-mFJZEJ {
+    background-color: #13131378;
+}
+.separator-Hx_3SF{
+    opacity: 0.01;
+}
+.wrapper-35wsBm {
+    background-color: #131313;
+}
+.embedFull-2tM8-- {
+    border-left: 4px solid #131313;
+    background: #131313;
+}
